Add bottom page

--- a/css/animation.css
+++ b/css/animation.css
@@ -1,50 +1,1 @@
-.to-left {
-  /* cubic-bezier(0.25,0.1,0.25,1) */
-  -webkit-animation: to-left 800ms ease-in-out;
-  animation: to-left 800ms ease-in-out; }
-
-/* Chrome, Safari, Opera */
-@-webkit-keyframes to-left {
-  to {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0); } }
-@keyframes to-left {
-  to {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0); } }
-.from-left {
-  -webkit-animation: from-left 800ms ease-in-out;
-  animation: from-left 800ms ease-in-out; }
-
-@-webkit-keyframes from-left {
-  from {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0); } }
-@keyframes from-left {
-  from {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0); } }
-.to-right {
-  -webkit-animation: to-right 800ms ease-in-out;
-  animation: to-right 800ms ease-in-out; }
-
-@-webkit-keyframes to-right {
-  to {
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0); } }
-@keyframes to-right {
-  to {
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0); } }
-.from-right {
-  -webkit-animation: from-right 800ms ease-in-out;
-  animation: from-right 800ms ease-in-out; }
-
-@-webkit-keyframes from-right {
-  from {
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0); } }
-@keyframes from-right {
-  from {
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0); } }
+.to-left{-webkit-animation:to-left 800ms ease-in-out;animation:to-left 800ms ease-in-out}@-webkit-keyframes to-left{to{-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0)}}@keyframes to-left{to{-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0)}}.from-left{-webkit-animation:from-left 800ms ease-in-out;animation:from-left 800ms ease-in-out}@-webkit-keyframes from-left{from{-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0)}}@keyframes from-left{from{-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0)}}.to-right{-webkit-animation:to-right 800ms ease-in-out;animation:to-right 800ms ease-in-out}@-webkit-keyframes to-right{to{-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0)}}@keyframes to-right{to{-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0)}}.from-right{-webkit-animation:from-right 800ms ease-in-out;animation:from-right 800ms ease-in-out}@-webkit-keyframes from-right{from{-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0)}}@keyframes from-right{from{-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0)}}
