--- a/css/main.css
+++ b/css/main.css
@@ -1,142 +1,1 @@
-/** For main page and another page **/
-body {
-  overflow: hidden;
-}
-
-.error {
-  color: #a94442;
-  font-size: 0.9em;
-}
-
-.btn-inverse {
-  color: #fafafa;
-  background-color: #000000;
-  opacity: 0.3;
-}
-
-.main_page,
-.right_page {
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000;
-  perspective: 1000;
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  transform: translateZ(0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  visibility: hidden;
-  background-color: #f5f5f5;
-}
-.main_page .btn,
-.right_page .btn {
-  color: #fafafa;
-}
-
-.main_page {
-  background-image: url(../img/background-andromeda.png);
-  background-size: cover;
-  color: #fafafa;
-}
-.main_page a:active {
-  background-color: #fafafa;
-  color: #333333;
-}
-
-.active {
-  visibility: visible;
-}
-
-/** MAIN PAGE **/
-.main_contain {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.main_contain .btn-mobile {
-  display: none;
-}
-
-.btn-desktop {
-  background-color: #000000;
-  opacity: 0.3;
-}
-
-.btn-register {
-  position: absolute;
-  bottom: 1em;
-  right: 1em;
-}
-
-.btn-blog {
-  position: absolute;
-  left: 1em;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-/** PAGE 2 **/
-.login_contain {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #dddddd;
-  width: 432px;
-  padding: 48px;
-}
-.login_contain label {
-  font-weight: normal;
-}
-.login_contain .logo {
-  margin-bottom: 1em;
-}
-
-.btn-login {
-  background-color: #FE9A2E;
-  color: #fafafa;
-}
-
-.forget-link {
-  float: right;
-}
-
-.remove-right {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-/** DISPLAY ON iPhone 6 **/
-@media all and (min-width: 320px) and (max-width: 667px) {
-  /** MAIN PAGE **/
-  .main_contain {
-    position: absolute;
-    text-align: center;
-  }
-  .main_contain .btn-mobile {
-    display: block;
-  }
-
-  .btn-desktop {
-    display: none;
-  }
-
-  /** PAGE 2 **/
-  .login_contain {
-    background-color: transparent;
-    width: inherit;
-    padding: 48px 16px;
-  }
-}
+body{overflow:hidden}.error{color:#D53F3C;font-size:0.9em;font-weight:normal}.btn-inverse{color:#fafafa;background-color:#000000;opacity:0.3}.main_page,.right_page,.bottom_page{-webkit-backface-visibility:hidden;-moz-backface-visibility:hidden;-ms-backface-visibility:hidden;-o-backface-visibility:hidden;backface-visibility:hidden;-webkit-perspective:1000;perspective:1000;-webkit-transform:translateZ(0);-moz-transform:translateZ(0);-ms-transform:translateZ(0);-o-transform:translateZ(0);transform:translateZ(0);position:absolute;top:0;left:0;width:100%;height:100%;visibility:hidden;background-color:#f5f5f5}.main_page .btn,.right_page .btn,.bottom_page .btn{color:#fafafa}.main_page{background-image:url(../img/background-andromeda.png);background-size:cover;color:#fafafa}.main_page a:active{background-color:#fafafa;color:#333333}.active{visibility:visible}.main_contain{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.main_contain .btn-mobile{display:none}.btn-desktop{background-color:#000000;opacity:0.3}.btn-register{position:absolute;bottom:1em;right:1em}.btn-blog{position:absolute;left:1em;top:50%;transform:translateY(-50%)}.login_contain{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);background-color:#dddddd;width:432px;padding:48px}.login_contain label{font-weight:normal}.login_contain .logo{margin-bottom:1em}.btn-login{background-color:#FE9A2E;color:#fafafa}.forget-link{float:right}.remove-right,.remove-bottom{position:absolute;top:16px;right:16px;font-size:16px;cursor:pointer}.bottom_main_contain{width:100%;margin:0 auto;position:relative;background-color:#f5f5f5}.bottom_main_contain .banner{background-color:#ffffff;padding:0}.bottom_img img{height:40px;margin:16px 0}.bottom_form{background-color:#ffffff;padding-top:16px;padding-bottom:16px}.bottom_form legend{border-bottom:none}@media all and (min-width: 320px) and (max-width: 667px){.main_contain{position:absolute;text-align:center}.main_contain .btn-mobile{display:block}.btn-desktop{display:none}.login_contain{background-color:transparent;width:inherit;padding:48px 16px}.logo img{height:50px}}@media all and (min-width: 992px){.bottom_page{height:inherit}.bottom_main_contain{width:922px}}@media all and (max-width: 992px){.bottom_main_contain .banner{display:none}}
