--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,8 +32,9 @@ body{
     overflow: hidden;
 }
 .error{
-    color: #a94442;
+    color: #D53F3C;
     font-size: 0.9em;
+    font-weight: normal;
 }
 .btn-inverse{
     color: #fafafa;
@@ -41,7 +42,8 @@ body{
     opacity: 0.3;
 }
 .main_page,
-.right_page{
+.right_page,
+.bottom_page{
     @include absolute-page;
     background-color: #f5f5f5;
 
@@ -87,7 +89,7 @@ body{
     transform: translateY(-50%);
 }
 
-/** PAGE 2 **/
+/** RIGHT PAGE **/
 .login_contain{
     @include float-center;
     background-color: #dddddd;
@@ -109,7 +111,8 @@ body{
 .forget-link{
     float: right;
 }
-.remove-right{
+.remove-right,
+.remove-bottom{
     position: absolute;
     top: 16px;
     right: 16px;
@@ -117,8 +120,35 @@ body{
     cursor: pointer;
 }
 
+/* BOTTOM PAGE */
+.bottom_main_contain{
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    background-color: #f5f5f5;
+
+    .banner{
+        background-color: #ffffff;
+        padding: 0;
+    }
+}
+.bottom_img img{
+    height: 40px;
+    margin: 16px 0;
+}
+.bottom_form{
+    background-color: #ffffff;
+    padding-top: 16px;
+    padding-bottom: 16px;
+
+    legend{
+        border-bottom: none;
+    }
+}
+
 /** DISPLAY ON iPhone 6 **/
-@media all and (min-width: 320px) and (max-width: 667px){
+@media all and (min-width: 320px) and (max-width: 667px) {
+
     /** MAIN PAGE **/
     .main_contain{
         position: absolute;
@@ -132,10 +162,36 @@ body{
         display: none;
     }
 
-    /** PAGE 2 **/
+    /** RIGHT PAGE **/
     .login_contain{
         background-color: transparent;
         width: inherit;
         padding: 48px 16px;
+    }
+    .logo img{
+        height: 50px;
+    }
+}
+
+/* Set width when display on labtop */
+@media all and (min-width: 992px) {
+
+    /* BOTTOM PAGE */
+    .bottom_page{
+        height: inherit;
+    }
+    .bottom_main_contain{
+        width: 922px;
+    }
+}
+
+/* Hide banner when display on iPad portrait */
+@media all and (max-width: 992px){
+
+    /* BOTTOM PAGE */
+    .bottom_main_contain{
+        .banner{
+            display: none;
+        }
     }
 }
