--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,12 @@
     width: 100%;
     height: 100%;
     visibility: hidden;
+
+    -webkit-transition: transform 1s;
+    -moz-transition: transform 1s;
+    -ms-transition: transform 1s;
+    -o-transition: transform 1s;
+    transition: transform 1s;
 }
 @mixin float-center{
     position: absolute;
@@ -30,6 +36,7 @@
 }
 body{
     overflow: hidden;
+    background-color: #f5f5f5;
 }
 .error{
     color: #D53F3C;
@@ -45,7 +52,6 @@ body{
 .right_page,
 .bottom_page{
     @include absolute-page;
-    background-color: #f5f5f5;
 
     .btn{
         color: #fafafa;
